# opentypeless

./: .typos.toml  eslint.config.js  package-lock.json  package.json
.github/workflows/: ci.yml  pr-title.yml
docs/: project-integration-issues.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: evdev_shortcut.rs  lib.rs  pipeline.rs  uinput_output.rs
src-tauri/src/output/: clipboard.rs  keyboard.rs
src-tauri/src/stt/: cloud.rs
src/components/AccountPage/: index.tsx
src/components/Capsule/: CapsuleError.tsx
src/components/MainLayout/: AccessibilityBanner.tsx  index.tsx
src/components/Onboarding/: DoneStep.tsx  ModeSelectStep.tsx
src/components/Settings/: AboutPane.tsx  GeneralPane.tsx
src/components/Settings/__tests__/: Settings.test.tsx
src/components/UpgradePage/: index.tsx
src/hooks/: useTauriEvents.ts
src/i18n/locales/: en.json  zh.json
src/lib/: api.ts  tauri.ts
src/lib/__tests__/: api.test.ts
src/stores/: appStore.ts  authStore.ts
src/stores/__tests__/: authStore.test.ts
