[package]
name = "opentypeless"
version = "0.1.0"
description = "AI-powered speech-to-text and text polishing desktop app"
authors = ["OpenTypeless Contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "opentypeless_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17"
enigo = "0.2"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
async-trait = "0.1"
arboard = "3"
http = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
url = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "thin"
strip = true
